Closed
Bug 613853
Opened 12 years ago
Closed 12 years ago
Qt - ASSERTION: Old pixman and rotate transform +compilation bustage
Categories
(Core Graveyard :: Widget: Qt, defect)
Tracking
(fennec2.0+)
RESOLVED
FIXED
Tracking | Status | |
---|---|---|
fennec | 2.0+ | --- |
People
(Reporter: romaxa, Unassigned)
References
Details
Attachments
(1 file)
1.58 KB,
patch
|
dougt
:
review+
|
Details | Diff | Splinter Review |
Followup for 608779#c8 ###!!! ASSERTION: Old pixman and rotate transform, it is going to be slow: also MApplication not included properly
Attachment #492177 -
Flags: review?(doug.turner)
Updated•12 years ago
|
Attachment #492177 -
Flags: review?(doug.turner) → review+
Updated•12 years ago
|
tracking-fennec: --- → 2.0+
Comment 1•12 years ago
|
||
http://hg.mozilla.org/mozilla-central/rev/2f9f6cb3a0ef
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Assignee | ||
Updated•6 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•