Bug 613853 - Qt - ASSERTION: Old pixman and rotate transform +compilation bustage. r=dougt a=b-f