widget/src/qt/nsWindow.cpp
@@ -71,6 +71,9 @@ static Qt::GestureType gSwipeGestureId = Qt::CustomGesture;
 // multitouch.
 static const float GESTURES_BLOCK_MOUSE_FOR = 200;
 #endif // QT version check
+#ifdef MOZ_ENABLE_MEEGOTOUCH
+#include <MApplication>
+#endif
 
 #ifdef MOZ_X11
 #include <QX11Info>
@@ -1056,14 +1059,14 @@ nsWindow::DoPaint(QPainter* aPainter, const QStyleOptionGraphicsItem* aOption, Q
     else if (renderMode == gfxQtPlatform::RENDER_DIRECT) {
       MWindow* window = MApplication::activeWindow();
       if (window) {
-        // This is needed for rotate transformation on Meego
+        // This is needed for rotate transformation on MeeGo
         // This will work very slow if pixman does not handle rotation very well
         gfxMatrix matr;
         M::OrientationAngle angle = window->orientationAngle();
         matr.Translate(gfxPoint(aPainter->transform().dx(), aPainter->transform().dy()));
         matr.Rotate((M_PI/180)*angle);
         ctx->SetMatrix(matr);
-        NS_ASSERTION(PIXMAN_VERSION < PIXMAN_VERSION_ENCODE(0, 21, 2) && angle, "Old pixman and rotate transform, it is going to be slow");
+        NS_ASSERTION(PIXMAN_VERSION > PIXMAN_VERSION_ENCODE(0, 21, 2) || !angle, "Old pixman and rotate transform, it is going to be slow");
       }
     }
 #endif
